--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ keywords = ["kivy" ,"xkivy" ,"app" ,"kivymd"]
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT LICENSE",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
